# Antares_Murmurs

./: .gitignore  README.md  pyproject.toml
backend/: main.py
backend/config/: database.py
backend/models/: emotions.py  star.py
backend/routes/: api.py
backend/services/: ai_star_info.py  check.py  checking.py  nasa_api.py  redis_client.py  simbad_api.py  star_constellation.py
src/automation/: config.py  logging.py
src/automation/deployments/: update_mythology_deployment.py  update_star_data_deployment.py
src/automation/flows/: update_mythology.py  update_star_data.py
src/backend/: main.py
src/backend/core/: database.py
src/backend/models/: emotions.py  star.py
src/backend/routes/: api.py
src/backend/services/: ai_star_info.py  nasa_api.py  redis_client.py  simbad_api.py  star_constellation.py
