[project]
name = "antares-murmurs"
version = "0.1.0"
description = ""
authors = [
    {name = "bntmzu",email = "kuranova988@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openai (>=1.66.3,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "astroquery (>=0.4.9.post1,<0.5.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "aioredis (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
